--- a/got-project/style.css
+++ b/got-project/style.css
@@ -63,12 +63,74 @@ body {
 
 .input__field {
   padding: 5px;
+  border-radius: 5px;
+  background-color: rgb(240, 240, 240);
+  background-image: url("./assets/magnifyer.png");
+  background-repeat: no-repeat;
+  background-size: 38px;
+  padding-left: 32px;
+  border: 0;
+}
+
+.input__field:focus {
+  outline: none;
 }
 
 .search {
   padding: 5px;
+  border-radius: 5px;
 }
 
-.open {
-  padding: 5px;
+.characterIcon {
+  text-align: center;
+  font-size: 20px;
+}
+
+.name__badge {
+  display: flex;
+  align-content: space-between;
+  padding: 0 5px;
+}
+
+.bioname {
+  font-size: 27px;
+  font-weight: bold;
+}
+
+.badge {
+  margin-left: auto;
+  max-height: 40px;
+}
+
+.characterImage {
+  cursor: pointer;
+}
+
+.characterImage:hover {
+  transform: scale(1.1);
+}
+
+.charImage {
+  width: 100%;
+}
+
+.notfound {
+  font-family: "Grenze Gotisch", cursive;
+}
+
+@media only screen and (max-width: 760px) {
+  .container__pictures {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    height: 80%;
+  }
+
+  .container__main {
+    flex-direction: column;
+  }
+
+  .container__info {
+    width: 100%;
+    height: 20%;
+  }
 }
